--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "apollo-cache-persist": "^0.1.1",
+    "apollo-link-ws": "^1.0.20",
+    "apollo3-cache-persist": "^0.9.1",
     "graphql": "^15.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "subscriptions-transport-ws": "^0.9.18",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
